// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-split-button should render with _label="Label" _disabled=true 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _disabled="" _label="Label" _tooltipalign="top" _type="button" _variant="normal" class="button main-button normal"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _disabled="" _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _hideLabel=true 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _hidelabel="" _label="Label" _tooltipalign="top" _type="button" _variant="normal" class="button main-button normal"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _icons="codicon codicon-git-pull-request" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _icons="codicon codicon-git-pull-request" _label="Label" _tooltipalign="top" _type="button" _variant="normal" class="button main-button normal"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _name="Name" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _label="Label" _name="Name" _tooltipalign="top" _type="button" _variant="normal" class="button main-button normal"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _variant="danger" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _label="Label" _tooltipalign="top" _type="button" _variant="danger" class="button danger main-button"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _variant="ghost" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _label="Label" _tooltipalign="top" _type="button" _variant="ghost" class="button ghost main-button"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _variant="normal" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _label="Label" _tooltipalign="top" _type="button" _variant="normal" class="button main-button normal"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _variant="primary" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _label="Label" _tooltipalign="top" _type="button" _variant="primary" class="button main-button primary"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" _variant="secondary" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _label="Label" _tooltipalign="top" _type="button" _variant="secondary" class="button main-button secondary"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;

exports[`kol-split-button should render with _label="Label" 1`] = `
<kol-split-button class="kol-split-button">
  <template shadowrootmode="open">
    <div class="split-button-root">
      <kol-button-wc _label="Label" _tooltipalign="top" _type="button" _variant="normal" class="button main-button normal"></kol-button-wc>
      <div class="horizontal-line"></div>
      <kol-button-wc _hidelabel="" _icons="codicon codicon-triangle-down" _label="kol-split-button-dropdown-label-open" class="secondary-button"></kol-button-wc>
    </div>
    <kol-popover-wc _align="bottom">
      <slot></slot>
    </kol-popover-wc>
  </template>
</kol-split-button>
`;
